<resources>
    <string name="app_name">FitLife</string>
    <string name="sign_in">Sign In</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="admin">Admin</string>
    <string name="register">Register</string>
    <string name="registergo">New User? Click here to register.</string>
    <string name="name">Name</string>
    <string name="country">Country</string>
    <string name="gender">Gender</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="rebot">Please flip your phone to prove not robot.</string>
    <string name="home">Home</string>
    <string name="mobile">Mobile</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="addproduct">Add Product</string>
    <string name="title">Title</string>
    <string name="description">Description</string>
    <string name="price">Price</string>
    <string name="qty">Quantity</string>
    <string name="addimage">Add Image</string>
    <string name="signout">Sign Out</string>
    <string name="welcome">Welcome</string>
    <string name="fitlife">FitLife</string>
    <string name="maintext">Track. Train. Transform. Anywhere. Anytime.</string>
    <string name="choose">Select Your Workout</string>
    <string name="view">View</string>
    <string name="blockuser">you are temporarily blocked.please contact customer care</string>
    <string name="users">Users</string>
    <string name="searchuser">Search User</string>
    <string name="n">N</string>
    <string name="genderchart">Users By Gender Distribution</string>
    <string name="searchproduct">Search Product</string>
    <string name="addtocart">Add To Cart</string>
    <string name="remove">Remove</string>
    <string name="cart">Cart</string>
    <string name="total">Sub Total</string>
    <string name="checkout">Checkout</string>
    <string name="addworkout">Add Workout</string>
    <string name="steptracking">Step Tracking</string>
    <string name="steps">Steps</string>
    <string name="guide">Guide</string>
    <string name="addexercises">Add Exercises</string>
    <string name="addnutrition">Add Nutrition</string>
    <string name="addsubscription">Add Subscription</string>
    <string name="subscription">Subscription</string>
    <string name="subscriptionnumber">Monthly Price</string>
    <string name="pay">Pay</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="title_activity_admin">AdminActivity</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>