<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_searchProduct"
            android:icon="@drawable/product"
            android:title="@string/searchproduct" />

        <item
            android:id="@+id/nav_cart"
            android:icon="@drawable/cart"
            android:title="@string/cart" />

        <item
            android:id="@+id/nav_tracking"
            android:icon="@drawable/run"
            android:title="@string/steptracking" />

        <item
            android:id="@+id/nav_guide"
            android:icon="@drawable/edit"
            android:title="@string/guide" />
    </group>
</menu>