<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation2"
    app:startDestination="@+id/nav_user">

    <fragment
        android:id="@+id/nav_user"
        android:name="com.example.fitlife.ui.user.UserFragment"
        android:label="@string/users"
        tools:layout="@layout/fragment_user" />

    <fragment
        android:id="@+id/nav_product"
        android:name="com.example.fitlife.ui.product.ProductFragment"
        android:label="@string/addproduct"
        tools:layout="@layout/fragment_product" />

    <fragment
        android:id="@+id/nav_adminworkout"
        android:name="com.example.fitlife.ui.adminworkout.AdminWorkoutFragment"
        android:label="@string/addworkout"
        tools:layout="@layout/fragment_admin_workout" />

</navigation>